--- a/views/add_location.ejs
+++ b/views/add_location.ejs
@@ -28,7 +28,7 @@
         <div class="field">
           <label for="name" class="label">Nama Lokasi:</label>
           <div class="control">
-            <input type="text" id="name" name="name" class="input" required>
+            <input type="text" id="name" name="name" class="input is-capitalized" required>
           </div>
         </div>
 
