--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,14 +32,14 @@
               Data Koordinat
             </a>
             <a class="navbar-item">
-              Jobs
+              Data Jenjang Pendidikan
             </a>
             <a class="navbar-item">
-              Contact
+              
             </a>
             <hr class="navbar-divider">
             <a class="navbar-item">
-              Report an issue
+              
             </a>
           </div>
         </div>
